# verun

./: .gitignore  .verun.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PHASE-2-RUST-BACKEND.md  PHASE-3-FRONTEND-STATE.md  PHASE-4-UI-COMPONENTS.md  PHASE-5-POLISH-RELEASE.md  README.md  ROADMAP.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  uno.config.ts  vite.config.ts
.cargo/: config.toml
.claude/commands/: bump-version.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.zed/: settings.json  tasks.json
scripts/: check.sh  clean-dmg.sh  dev.sh  fetch-brand-icons.mjs  pre-commit  setup.sh  validate-bts-cli.ts
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/lsp/: package-lock.json  package.json
src-tauri/scripts/: copy-relay-sidecar.mjs
src-tauri/src/: agent.rs  auto_safe.rs  blob.rs  bts_scaffold.rs  claude_jsonl.rs  claude_terminal.rs  claude_transcript_tail.rs  db.rs  env_path.rs  fd_limit.rs  file_search.rs  git_ops.rs  github.rs  github_remote.rs  ipc.rs  lib.rs  lsp.rs  main.rs  markdown_skills.rs  mcp.rs  plugin_marketplace.rs  policy.rs  pty.rs  resource_monitor.rs  snapshots.rs  stream.rs  task.rs  tsgo_check.rs  wakeup.rs  watcher.rs  worktree.rs
src-tauri/src/agent/: claude.rs  codex.rs  codex_developer_instructions.rs  codex_rpc.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs
src-tauri/src/snapshots/: verun_lib__db__tests__migration_v1_sql.snap
src-tauri/tests/: relay_binary.rs
src-tauri/tests/fixtures/claude_jsonl/: sample.jsonl
src/components/: ActionsPanel.test.ts  ActionsPanel.test.tsx  ActionsPanel.tsx  AddPatternForm.tsx  AddProjectDialog.tsx  AgentPanel.tsx  AgentPicker.tsx  ArchivedPage.tsx  AutoSafeProjectOverride.tsx  AutoSafeSettings.tsx  BashPatternList.test.tsx  BashPatternList.tsx  BlobImage.tsx  BranchCommits.tsx  BreadcrumbBar.tsx  BtsBuilderDialog.test.tsx  BtsBuilderDialog.tsx  BtsLogPane.tsx  ChangesHeader.test.tsx  ChangesHeader.tsx  ChatView.pagination.test.tsx  ChatView.rebuildBlocks.test.ts  ChatView.tsx  ChipList.test.tsx  ChipList.tsx  ClaudeDefaultViewPicker.test.tsx  ClaudeDefaultViewPicker.tsx  ClaudeViewToggle.test.tsx  ClaudeViewToggle.tsx  CloneRepoDialog.test.tsx  CloneRepoDialog.tsx  CodeChanges.test.tsx  CodeChanges.tsx  CodeEditor.references.test.ts  CodeEditor.tsx  CodeTextarea.test.ts  CodeTextarea.tsx  ColorPicker.tsx  CommandPalette.tsx  CommitComposer.test.tsx  (+86 more)
src/hooks/: useAgent.ts  useWorktree.ts
src/lib/: addProjectMenu.test.ts  addProjectMenu.ts  addProjectMenu.tsx  agents.test.ts  agents.ts  appInit.ts  autodetect-prompt.ts  binary.ts  btsSchema.test.ts  btsSchema.tsx  btsStack.test.ts  btsStack.ts  dismissable.ts  fileIcons.tsx  fileTypes.ts  format.test.ts  format.ts  ghLogs.test.ts  ghLogs.ts  gitStatus.test.ts  gitStatus.ts  highlighter.ts  ipc.test.ts  ipc.ts  lsp.ts  markdown.ts  mentions.ts  notifications.test.ts  notifications.ts  planAction.test.ts  planAction.ts  platform.ts  pluginMeta.test.ts  pluginMeta.ts  questionKeyAction.test.ts  questionKeyAction.ts  seedData.ts  taskDiff.test.ts  taskDiff.ts  taskMenu.test.ts  (+11 more)
src/store/: actions.test.ts  actions.ts  agents.test.ts  agents.ts  autoSafe.test.ts  autoSafe.ts  changesActions.test.ts  changesActions.ts  commands.test.ts  commands.ts  editorTypes.ts  editorView.reveal.test.ts  editorView.ts  fileSync.test.ts  fileSync.ts  files.test.ts  files.ts  git.test.ts  git.ts  githubDebug.ts  modelPicker.ts  plugins.ts  problems.test.ts  problems.ts  projects.test.ts  projects.ts  queue.ts  recentFiles.test.ts  recentFiles.ts  resource-monitor.test.ts  resource-monitor.ts  sessionContext.test.ts  (+27 more)
(+10 files in other folders)
