[package]
name = "verun"
version = "0.3.0"
description = "Parallel Claude Code Agent Orchestrator for macOS"
authors = ["SoftwareSavants"]
edition = "2021"

[lib]
name = "verun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
libc = "0.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
portable-pty = "0.8"

[dev-dependencies]
rstest = "0.18"
insta = { version = "1", features = ["json", "toml"] }
tempfile = "3"

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
