[package]
name = "verun"
version = "0.10.0"
description = "Parallel Claude Code Agent Orchestrator for macOS"
authors = ["SoftwareSavants"]
edition = "2021"

[lib]
name = "verun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Thin stdio<->Unix-socket relay launched per Claude Code session as the
# MCP server entry point. Reads VERUN_TASK_ID + VERUN_MCP_SOCKET, writes
# the identity frame, and bidirectionally pipes ndjson between Claude's
# stdio and the in-app host socket.
[[bin]]
name = "verun-mcp-relay"
path = "src/bin/verun_mcp_relay.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
libc = "0.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
portable-pty = "0.8"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
notify = "7"
notify-debouncer-mini = "0.5"
yash-syntax = "0.19"
sha2 = "0.10"
base64 = "0.22"

# macOS: native UNUserNotificationCenter (click routing + Notification Center clearing).
# The plugin's build.rs invokes `swift build` with no --arch flag, so Swift compiles for the
# host CPU only — the Intel build therefore has to run on an actual Intel runner
# (`macos-15-intel`) rather than cross-compiling from `macos-26` (arm).
#
# Linux / Windows: the plugin has no native branch without `notify-rust`, so we enable it.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-notifications = { version = "0.4", default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri-plugin-notifications = { version = "0.4", default-features = false, features = ["notify-rust"] }

[dev-dependencies]
rstest = "0.18"
insta = { version = "1", features = ["json", "toml"] }
tempfile = "3"

# Dev builds run unbundled, so the native macOS notifications backend can't
# initialize (UNUserNotificationCenter requires a .app). Enable this feature
# via `pnpm tauri dev` / `make dev`, which pulls in the notify-rust fallback.
# Release builds omit it and get the native backend with click routing +
# Notification Center clearing.
[features]
dev-notifications = ["tauri-plugin-notifications/notify-rust"]

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
